Add comprehensive unit tests and update backend services